fix dark mode toggle alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,7 +333,7 @@ input[type="radio"]#color5 {
 }
 
 input[type="radio"]#color6 {
-    --radio-color: hsl(40, 60%, 60%);
+    --radio-color: hsl(35, 60%, 60%);
 }
 
 .color1,
@@ -399,13 +399,13 @@ input[type="radio"]#color6 {
 .color6,
 :root:has(#color6:checked) {
     /* gradient */
-    --bg-gradient-btn-1: linear-gradient( to bottom right, hsl(40, 58%, 43%) 0%, hsla(36, 100%, 69%, 0) 50%);
-    --bg-gradient-btn-2: linear-gradient( 135deg, hsla(40, 90%, 41%, 0.251) 0%, hsla(35, 100%, 68%, 0) 59.86%), hsl(240, 2%, 100%);
-    --border-gradient-onyx: linear-gradient( to bottom right, hsl(40, 20%, 75%) 0%, hsla(255, 0%, 25%, 0) 50%);
-    --text-gradient-yellow: linear-gradient( to right, hsl(40, 100%, 18%), hsl(43, 80%, 62%));
+    --bg-gradient-btn-1: linear-gradient( to bottom right, hsl(35, 58%, 43%) 0%, hsla(36, 100%, 69%, 0) 50%);
+    --bg-gradient-btn-2: linear-gradient( 135deg, hsla(35, 90%, 41%, 0.251) 0%, hsla(35, 100%, 68%, 0) 59.86%), hsl(240, 2%, 100%);
+    --border-gradient-onyx: linear-gradient( to bottom right, hsl(35, 20%, 75%) 0%, hsla(255, 0%, 25%, 0) 50%);
+    --text-gradient-yellow: linear-gradient( to right, hsl(35, 100%, 18%), hsl(38, 80%, 62%));
     /* solid */
-    --border-color: hsl(40, 60%, 60%);
-    --main-accent: hsl(40, 60%, 60%);
+    --border-color: hsl(35, 60%, 60%);
+    --main-accent: hsl(35, 60%, 60%);
 }
 
 .visually-hidden {
@@ -603,6 +603,10 @@ main {
 
 .navbar-link.active {
     color: var(--border-color);
+}
+
+.navbar-item {
+    align-items: center;
 }
 
 
